# vn-news-infra

./: .env.example  .env.workers.example  .gitignore  .resource-manager.env.example  Makefile  compose.control.yaml  compose.data.yaml  compose.processing.yaml  compose.workers.yaml  compose.yaml  images.yaml  pyproject.toml
.github/workflows/: ci.yaml  publish-images.yaml
access/cloudflare/: compose.control.yaml  compose.data.yaml
airflow/: compose.yaml
airflow/runtime/: Dockerfile  pyproject.toml
bootstrap/: bootstrap.env.example  bootstrap_host.sh
bootstrap/lib/: common.sh  packages.sh  roles.sh  runtime.sh  security.sh  volumes.sh
env/: control.env.example  data.env.example  processing.env.example
flink/: compose.yaml
ingestion/: compose.yaml
observability/: compose.yaml
opensearch/: compose.yaml
polaris/: compose.yaml
qdrant/: compose.yaml
redpanda/: compose.yaml  console.yaml
scripts/: check_terraform_guardrails.py  configure_host_operations.sh  create_resource_manager_stack.sh  create_runtime_secrets.py  export_recovery.sh  get_service_credential.sh  materialize_runtime_secrets.sh  prune_airflow_task_containers.sh  publish_host_metrics.sh  render_resource_manager_variables.py  resource_manager_common.sh  resource_manager_stack.sh  runtime_secret_catalog.py  runtime_secret_tfvars.py  sync_cloudflare_tunnel_secrets.py  update_resource_manager_stack.sh  verify_recovery_restore.sh
seaweedfs/: compose.yaml
spark/: compose.control.yaml  compose.processing.yaml  compose.yaml
tests/: test_secret_config.py
trino/: compose.yaml
(+54 files in other folders)
